[package]
name = "cheat_detector"
version = "5.1.0"
edition = "2021"

[dependencies]
eframe = "0.27"
egui = "0.27"
zip = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.8"
walkdir = "2.4"
rfd = "0.14"
dirs = "5.0"
num_cpus = "1.0"

[profile.release]
opt-level = 3
lto = "fat"              # Агрессивная оптимизация линковщика
codegen-units = 1        # Лучшая оптимизация (медленнее компиляция)
panic = "abort"          # Меньше размер бинарника
strip = true             # Удаляем отладочные символы
overflow-checks = false  # Отключаем проверки переполнения

[profile.dev]
opt-level = 1            # Небольшая оптимизация для быстрых тестов